# openv

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  fmt.yml  homebrew.yml  lint.yml  test.yml
src/: config.rs  doc.rs  hooks.rs  logger.rs  logic.rs  main.rs
src/configuration/: config.rs  default_config.toml
src/hooks/: bash.rs  common.rs  fish.rs  mod.rs  zsh.rs
