[package]
name = "openv"
version = "0.0.1"
authors = ["andrea11 <10788630+andrea11@users.noreply.github.com>"]
description = "A CLI tool to make integration between .env file and op CLI smoother."
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/andrea11/openv"
keywords = ["cli", "op", "1password", "wrapper"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
shlex = "1.3.0"
strum_macros = "0.27.2"
toml = "0.9.2"
